; ModuleID = '/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/os/extr_syscall.c_syscall3.c'
source_filename = "/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/os/extr_syscall.c_syscall3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @syscall3(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  call void asm sideeffect "\09\09\09   \09\09mov $1, %eax\09\09\0A \09\09mov $2, %ebx\09\09\0A \09\09mov $3, %ecx\09\09\0A \09\09mov $4, %edx\09\09\0A \09\09int $$0x80\09\09\0A \09\09mov %eax, $0", "=*imr,imr,imr,imr,imr,~{dirflag},~{fpsr},~{flags}"(i32* %9, i32 %10, i32 %11, i32 %12, i32 %13) #1, !srcloc !2
  %14 = load i32, i32* %9, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 257, i32 283, i32 303, i32 323, i32 343, i32 359}
